# opf

./: .dockerignore  .gitattributes  .gitconfig  .gitignore  .gitmodules  Dockerfile  Manifest.toml  Project.toml  README.md  add_paths  guild.yml  pyproject.toml  requirements.txt  requirements_nover.txt
GNN/Modules/: architectures.py  train.py
GNN/Utils/: dataTools.py  graphML.py
OPFHelpers/: Manifest.toml  Project.toml
OPFHelpers/src/: OPFHelpers.jl
cluster/: Dockerfile  build-image.sh  build.sh  main-big.sh  main.sh  optuna-db.yaml  optuna-job.yaml  study.sh  train.sh
models/: 8yvah9tn.ckpt  8yvah9tn.yaml
notebooks/: analysis.ipynb  cleanup.ipynb  compare.ipynb  constrained.ipynb  experiment.ipynb  figures.ipynb  optuna.ipynb  paper.ipynb  tables.ipynb  utils.py
opf/: __init__.py  data.py  modules.py  opfGNN.py  parse_data_denmark.ipynb  power.py  run_powermodels_sdp.jl  wrapper.py
opf/.ipynb_checkpoints/: parse_data_denmark-checkpoint.ipynb
paper/: OPF.aux  OPF.bbl  OPF.bcf  OPF.blg  OPF.run.xml  OPF.tex  analysis.ipynb  my_sections.tex  mysymbol.sty  opf.bib  paper.ipynb  results.xlsx  utils.py
paper/figures/: tikz_styles.tex
pyopf/: __init__.py  complex.py  constrained.py  data.py  modules.py  opfGNN.py  power.py  wrapper.py
scripts/: constrained.ipynb  constrained.py  experiment.ipynb  generate.jl  generate.py  generate_labeled.jl  generate_test.jl  main.py  plot.py  project.jl  queue-start  retest.py  runtime.jl  runtime.py  sweep.yaml  test.jl  train.py  wrapper.py
src/opf/: __init__.py  complex.py  constraints.py  dataset.py  generate.py  hetero.py  modules.py  plot.py  power.py  powerflow.py  project.jl  readout.py  test.py  utils.py
src/opf/katya/: k_constraints.py  k_modules.py  k_powerflow.py
src/opf/models/: __init__.py  base.py  hetero.py  simple.py
src/opf/plot/: data.py  plot.py
test/: case118_ieee.h5  case118_ieee.json  case30_ieee.h5  case30_ieee.json  test_hetero.py  test_opf.py  test_powerflow.py
