[tool.poetry]
name = "opf"
version = "0.1.0"
description = ""
authors = ["Damian Owerko <owerko@seas.upenn.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
pandapower = "^2.10.1"
pandas = ">1.5.2"
julia = "^0.6.0"
pytorch-lightning = "^2.0.6"
numpy = "^1.23.5"
jupyter = "^1.0.0"
black = "^22.10.0"
wandb = "^0.16.0"
pytest = "^7.2.0"
seaborn = "^0.12.2"
pandoc = "^2.3"
torch = "2.1.*"
matpowercaseframes = "^1.0.4"
torchcps = {git = "https://github.com/Damowerko/torchcps"}
optuna = "^3.3.0"
psycopg2-binary = "^2.9.7"
plotly = "^5.16.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.1.0+cu121.html"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
